--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </article>
-    <aside class="right_article"><img src="file:///C|/Users/ANONYMOUS/AppData/Roaming/Adobe/Dreamweaver CC 2019/en_US/Configuration/Temp/Assets/eam70AF.tmp/images/placeholder.jpg" alt="" width="400" height="200" class="placeholder"/> </aside>
+    <aside class="right_article"><img src="img/homepage.jpg" alt="" width="400" height="200" class="placeholder"/> </aside>
   </section>
   <div class="row">
     <div class="columns">
